--- a/10-RTOS_WIFI/python-server/templates/index.html
+++ b/10-RTOS_WIFI/python-server/templates/index.html
@@ -1,8 +1,8 @@
 <html>
-   <body>
-      <form action = "http://localhost:5000/status" method = "POST">
-         <p>LED STATUS <input type = "text" name = "LED" /></p>
-         <p><input type = "submit" value = "submit" /></p>
-      </form>
-   </body>
+  <body>
+    <form action="http://192.168.0.20:5000/status" method="POST">
+      <p>LED STATUS <input type="text" name="LED" /></p>
+      <p><input type="submit" value="submit" /></p>
+    </form>
+  </body>
 </html>
